# argocd-custom-exporter

./: .dockerignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: ci.yaml
deploy/: argocd-custom-exxporter.yaml  deployment.yaml  rbac.yaml  service.yaml  servicemonitor.yaml
src/: collector.rs  main.rs  metrics.rs  test.rs
